# quotes

./: .gitignore  README.md  justfile
client/: package-lock.json  package.json
client/src/routes/: +page.svelte
server/: Cargo.toml
server/migrations/: 20231029131002_quotes-table.sql
server/src/: main.rs
