[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.28", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "v7"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
] }
